Fix alignment

--- a/ui-library/scss/home.scss
+++ b/ui-library/scss/home.scss
@@ -69,7 +69,10 @@ section.links {
 
 section.related-services {
   background-color: $lightgray;
-  text-align: center;
+
+  h2 {
+    text-align: center;
+  }
 
   ul {
     align-items: center;
